--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,8 @@ aws:
     processingQueueUrl: https://sqs.us-east-2.amazonaws.com/492149691622/image-processing-queue
   dynamodb:
     statusTable: ImageProcessingStatus
-
+  sns:
+    notificationTopicArn: arn:aws:sns:us-east-2:492149691622:image-processing-notifications
 app:
   image:
     maxWidth: 1920
